# CourtRadar

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: dependency-review.yml  lint.yml  security.yml  tests.yml
app/: __init__.py  api.py  deps.py  main.py
app/core/: __init__.py  config.py
app/db/: __init__.py  models.py  session.py
app/modules/alerts/: model.py  repository.py  router.py  schemas.py  service.py
app/modules/listings/: __init__.py  model.py  repository.py  router.py  schemas.py  service.py
app/modules/users/: model.py  repository.py  router.py  schemas.py  service.py
app/schemas/: alert.py  listing.py
app/services/ingestion/: __init__.py
app/services/matching/: engine.py
app/services/notifications/: __init__.py  telegram_bot.py
app/services/parsing/: __init__.py  date_parser.py  fingerprint.py  gemini_parser.py  intent_parser.py  message_parser.py  models.py  parser.py  price_parser.py  time_parser.py  venue_parser.py
scripts/: create_tables.py  list_telegram_chat.py
src/courtradar/: __init__.py  main.py
src/courtradar/api/: deps.py  routes.py
src/courtradar/core/: config.py
src/courtradar/db/: __init__.py  models.py  session.py
tests/: conftest.py  factories.py  test_health.py
tests/test_alerts/: test_router.py  test_service.py
tests/test_listings/: test_router.py  test_service.py
tests/test_services/: test_fingerprint.py  test_matching.py  test_message_parser.py  test_parser.py
tests/test_users/: test_router.py  test_service.py
(+16 files in other folders)
